--- a/requirements.txt
+++ b/requirements.txt
@@ -151,4 +151,6 @@ plotly==5.18.0
 # ====================
 # scikit-learn==1.3.2
 # xgboost==2.0.3
-# lightgbm==4.1.0
+# lightgbm==4.1.0matplotlib>=3.5.0
+pandas>=1.5.0
+numpy>=1.23.0
