--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,4 @@
-version: '3.8'
-
 services:
-  # PostgreSQL
   postgres:
     image: postgres:15-alpine
     container_name: sptrans-postgres
@@ -11,25 +8,21 @@ services:
       POSTGRES_PASSWORD: test_password
     ports:
       - "5432:5432"
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U test_user"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    networks:
+      - sptrans-network
 
-  # Redis
   redis:
     image: redis:7-alpine
     container_name: sptrans-redis
     ports:
       - "6379:6379"
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 5s
-      timeout: 3s
-      retries: 5
+    volumes:
+      - redis-data:/data
+    networks:
+      - sptrans-network
 
-  # MinIO (S3-compatible)
   minio:
     image: minio/minio:latest
     container_name: sptrans-minio
@@ -40,13 +33,11 @@ services:
     ports:
       - "9000:9000"
       - "9001:9001"
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+    volumes:
+      - minio-data:/data
+    networks:
+      - sptrans-network
 
-  #Graphana
   grafana:
     image: grafana/grafana:latest
     container_name: sptrans-grafana
@@ -55,7 +46,6 @@ services:
     environment:
       - GF_SECURITY_ADMIN_USER=admin
       - GF_SECURITY_ADMIN_PASSWORD=admin
-      - GF_INSTALL_PLUGINS=
     volumes:
       - grafana-data:/var/lib/grafana
     depends_on:
@@ -63,9 +53,12 @@ services:
     networks:
       - sptrans-network
 
+networks:
+  sptrans-network:
+    driver: bridge
 
 volumes:
   postgres-data:
   minio-data:
   redis-data:
-  grafana-data:  
+  grafana-data:
