--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,18 +23,18 @@ services:
     networks:
       - sptrans-network
 
-  minio:
+minio:
     image: minio/minio:latest
     container_name: sptrans-minio
-    command: server /data --console-address ":9001"
-    environment:
-      MINIO_ROOT_USER: minioadmin
-      MINIO_ROOT_PASSWORD: minioadmin
     ports:
-      - "9000:9000"
-      - "9001:9001"
+      - "9000:9000"  # API
+      - "9001:9001"  # Console
+    environment:
+      - MINIO_ROOT_USER=minioadmin
+      - MINIO_ROOT_PASSWORD=minioadmin
     volumes:
       - minio-data:/data
+    command: server /data --console-address ":9001"
     networks:
       - sptrans-network
 
