limpeza do diretorio

--- a/.gitignore
+++ b/.gitignore
@@ -1,381 +1,14 @@
-# ============================================================================
-# SPTrans Pipeline - Git Ignore
-# ============================================================================
-# Arquivos e pastas que não devem ser versionados
-# ============================================================================
-
-# ====================
-# PYTHON
-# ====================
-# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
-*$py.class
-
-# C extensions
-*.so
-
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-pip-wheel-metadata/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-
-# PyInstaller
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-test-results/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-*.ipynb_checkpoints/
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-.python-version
-
-# pipenv
-Pipfile.lock
-
-# Poetry
-poetry.lock
-
-# pdm
-.pdm.toml
-
-# PEP 582
-__pypackages__/
-
-# Celery
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.env.local
-.env.*.local
-.venv
-env/
 venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# pytype static type analyzer
-.pytype/
-
-# Cython debug symbols
-cython_debug/
-
-# ====================
-# AIRFLOW
-# ====================
-airflow.db
-airflow.cfg
-airflow-webserver.pid
-airflow-scheduler.pid
-unittests.cfg
-logs/
-dags/__pycache__/
-plugins/__pycache__/
-
-# ====================
-# SPARK
-# ====================
-# Spark logs
-spark-warehouse/
-metastore_db/
-derby.log
-*.log
-
-# Spark temporary files
-.spark-history/
-
-# ====================
-# DATA FILES
-# ====================
-# Dados locais (não versionar)
-data/raw/**
-data/bronze/**
-data/silver/**
-data/gold/**
-data/serving/**
-data/temp/**
-data/backup/**
-
-# Exceto exemplos/schemas
-!data/raw/.gitkeep
-!data/bronze/.gitkeep
-!data/silver/.gitkeep
-!data/gold/.gitkeep
-!data/schemas/
-
-# GTFS files
-*.zip
-gtfs/
-!gtfs/.gitkeep
-
-# ====================
-# CREDENCIAIS & SEGREDOS
-# ====================
-# Nunca versionar credenciais!
-.secrets/
-secrets.yaml
-credentials.json
-service-account.json
-*.pem
-*.key
-*.crt
-*.p12
-*.pfx
-
-# AWS
-.aws/
-
-# GCP
-gcloud-service-key.json
-
-# Tokens
-.token
-*.token
-
-# ====================
-# DOCKER
-# ====================
-# Docker volumes
-docker-volumes/
-postgres-data/
-minio-data/
-kafka-data/
-
-# ====================
-# KUBERNETES
-# ====================
-# Sensitive K8s configs
-kubeconfig
-*.kubeconfig
-secrets.enc.yaml
-
-# ====================
-# TERRAFORM
-# ====================
-# Local .terraform directories
-**/.terraform/*
-
-# .tfstate files
-*.tfstate
-*.tfstate.*
-
-# Crash log files
-crash.log
-crash.*.log
-
-# Exclude all .tfvars files
-*.tfvars
-*.tfvars.json
-
-# Ignore override files
-override.tf
-override.tf.json
-*_override.tf
-*_override.tf.json
-
-# Ignore CLI configuration files
-.terraformrc
-terraform.rc
-
-# ====================
-# IDEs
-# ====================
-# VSCode
-.vscode/
-*.code-workspace
-
-# PyCharm
-.idea/
-*.iml
-*.iws
-
-# Sublime Text
-*.sublime-project
-*.sublime-workspace
-
-# Eclipse
-.project
-.pydevproject
-.settings/
-
-# Vim
-*.swp
-*.swo
-*~
-
-# Emacs
-*~
-\#*\#
-.\#*
-
-# ====================
-# OS
-# ====================
-# macOS
+.env
 .DS_Store
-.AppleDouble
-.LSOverride
-._*
-
-# Windows
-Thumbs.db
-Thumbs.db:encryptable
-ehthumbs.db
-ehthumbs_vista.db
-*.stackdump
-[Dd]esktop.ini
-$RECYCLE.BIN/
-
-# Linux
-*~
-.directory
-.Trash-*
-
-# ====================
-# DATABASES
-# ====================
-# SQLite
-*.db
-*.sqlite
-*.sqlite3
-
-# PostgreSQL dumps
-*.sql.gz
-*.dump
-
-# ====================
-# MONITORING
-# ====================
-# Prometheus data
-prometheus-data/
-
-# Grafana
-grafana-data/
-grafana.db
-
-# ====================
-# TEMP & CACHE
-# ====================
-tmp/
-temp/
-*.tmp
-*.temp
-cache/
-.cache/
-
-# ====================
-# NOTEBOOKS
-# ====================
-# Notebook outputs (se quiser versionar sem outputs)
-# Descomente se preferir não versionar outputs:
-# *.ipynb
-# Mas manter os notebooks versionados sem output:
-# !notebooks/*.ipynb
-
-# ====================
-# BUILD ARTIFACTS
-# ====================
-target/
-out/
-*.jar
-*.war
-*.ear
-
-# ====================
-# MISC
-# ====================
-# Backup files
-*.bak
-*.backup
-*.old
-*~
-
-# Compressed files (exceto releases)
-# *.tar.gz
-# *.zip
-# *.7z
-
-# Large files (Git LFS recommended)
+*.log
+data/bronze/
+data/silver/
+data/gold/
 *.parquet
-*.avro
-*.orc
-
-# ====================
-# PROJECT SPECIFIC
-# ====================
-# Outputs de teste
-outputs/
-results/
-reports/
-
-# Checkpoints
-checkpoints/
-*.ckpt
-
-# Datasets grandes
-datasets/large/
-datasets/production/
+.pytest_cache/
+backup_*.tar.gz
+!data/samples/
+!data/visualizations/
